--- a/BlazorAuthentication/BlazorAuthentication/Components/Pages/Redirect.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/Pages/Redirect.razor
@@ -1,5 +1,4 @@
-﻿@page "/Authenticated"
-
+﻿@page "/"
 @rendermode InteractiveServer
 @inject IAuthService AuthService
 @inject NavigationManager NavigationManager
@@ -10,9 +9,13 @@
     protected override async Task OnInitializedAsync()
     {
         var authState = await _authenticationStateProvider.GetAuthenticationStateAsync();
-        if (!authState.User.Identity.IsAuthenticated)
+        if (authState.User.Identity.IsAuthenticated)
+        {
+            NavigationManager.NavigateTo("home");
+        }
+        else
         {
             NavigationManager.NavigateTo("login");
-        } 
+        }
     }
 }
