--- a/BlazorAuthentication/BlazorAuthentication.Client/_Imports.razor
+++ b/BlazorAuthentication/BlazorAuthentication.Client/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorAuthentication.Client
+@using Radzen
+@using Radzen.Blazor
