--- a/BlazorAuthentication/BlazorAuthentication/Components/App.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/App.razor
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="BlazorAuthentication.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/standard-base.css">
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <HeadOutlet />
 </head>
 
@@ -17,6 +19,7 @@
     <div id="app" style="background-color: white;">
         <Routes />
     </div>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
