--- a/BlazorAuthentication/BlazorAuthentication/Components/Layout/NavMenu.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/Layout/NavMenu.razor
@@ -35,6 +35,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Logout
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="userindex">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Userindex
+            </NavLink>
+        </div>
         
     </nav>
 </div>
