--- a/BlazorAuthentication/BlazorAuthentication/Components/_Imports.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/_Imports.razor
@@ -12,3 +12,5 @@
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using BlazorAuthentication.Service.Interfaces
+@using Radzen
+@using Radzen.Blazor
