--- a/BlazorAuthentication/BlazorAuthentication/Components/Pages/Home.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/Pages/Home.razor
@@ -1,5 +1,7 @@
 ﻿@page "/home"
+
 @inject AuthenticationStateProvider AuthenticationStateProvider
+<Authenticated />
 <PageTitle>Home</PageTitle>
 
 <h1>Hello, world!</h1>
