--- a/BlazorAuthentication/BlazorAuthentication/Components/Routes.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/Routes.razor
@@ -4,7 +4,14 @@
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(Client._Imports).Assembly }">
         <Found Context="routeData">
-            <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+            <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" >
+                <NotAuthorized>
+                  <Authenticated/>
+                </NotAuthorized>
+                <Authorizing>
+                    <p>autorizando ....</p>
+                </Authorizing>
+            </AuthorizeRouteView>
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
         </Found>
         <NotFound>
