--- a/BlazorAuthentication/BlazorAuthentication.Client/_Imports.razor
+++ b/BlazorAuthentication/BlazorAuthentication.Client/_Imports.razor
@@ -9,3 +9,5 @@
 @using BlazorAuthentication.Client
 @using Radzen
 @using Radzen.Blazor
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.Authorization
