--- a/BlazorAuthentication/BlazorAuthentication/Components/App.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/App.razor
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/standard-base.css">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <HeadOutlet />
 </head>
 
