--- a/BlazorAuthentication/BlazorAuthentication.Client/Pages/UserIndexServer.razor
+++ b/BlazorAuthentication/BlazorAuthentication.Client/Pages/UserIndexServer.razor
@@ -33,15 +33,15 @@ O componente responde rapidamente e se atualiza. Isto acontece quase que instant
                                     AllowFiltering="false"
                                     AllowPaging="true"
                                     PageSize="Size"
-                                    PagerHorizontalAlign="HorizontalAlign.Center"
+                                    PagerHorizontalAlign="Radzen.HorizontalAlign.Center"
                                     TItem="UserProfileResponse"
                                     ColumnWidth="200px"
                                     EmptyText="Texto nao encontrado">
                         <Columns>
-                            <RadzenDataGridColumn TItem="UserProfileResponse" TextAlign="TextAlign.Center" Property="Name" Title="Nome" Width="160px" />
-                            <RadzenDataGridColumn TItem="UserProfileResponse" TextAlign="TextAlign.Center" Property="Email" Title="Email" Width="160px" />
-                            <RadzenDataGridColumn TItem="UserProfileResponse" TextAlign="TextAlign.Center" Property="UserName" Title="Usuários" Width="160px" />
-                            <RadzenDataGridColumn TItem="UserProfileResponse" TextAlign="TextAlign.Center" Property="Registration" Title="Matrícula" Width="160px" />
+                            <RadzenDataGridColumn TItem="UserProfileResponse" TextAlign="Radzen.TextAlign.Center" Property="Name" Title="Nome" Width="160px" />
+                            <RadzenDataGridColumn TItem="UserProfileResponse" TextAlign="Radzen.TextAlign.Center" Property="Email" Title="Email" Width="160px" />
+                            <RadzenDataGridColumn TItem="UserProfileResponse" TextAlign="Radzen.TextAlign.Center" Property="UserName" Title="Usuários" Width="160px" />
+                            <RadzenDataGridColumn TItem="UserProfileResponse" TextAlign="Radzen.TextAlign.Center" Property="Registration" Title="Matrícula" Width="160px" />
 
                         </Columns>
                     </RadzenDataGrid>
