--- a/BlazorAuthentication/BlazorAuthentication.Client/_Imports.razor
+++ b/BlazorAuthentication/BlazorAuthentication.Client/_Imports.razor
@@ -11,3 +11,6 @@
 @using Radzen.Blazor
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Calendars
+@using Syncfusion.Blazor.Grids
