--- a/BlazorAuthentication/BlazorAuthentication/Components/Layout/MainLayout.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/Layout/MainLayout.razor
@@ -12,7 +12,7 @@
 
 @*<Authenticated />  *@
 
-  <CascadingAuthenticationState>
+@*   <CascadingAuthenticationState> *@
   
             <div class="page">
         <AuthorizeView>
@@ -46,7 +46,7 @@
                 </main>
             </div>
   
-</CascadingAuthenticationState>
+@* </CascadingAuthenticationState> *@
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
