--- a/BlazorAuthentication/BlazorAuthentication/Components/App.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/App.razor
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/standard-base.css">
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link href="_content/Syncfusion.Blazor/styles/bootstrap5.css" rel="stylesheet" />
     <HeadOutlet />
 </head>
 
@@ -21,6 +22,7 @@
         <Routes />
     </div>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
+    <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
