--- a/BlazorAuthentication/BlazorAuthentication/Components/Layout/NavMenu.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/Layout/NavMenu.razor
@@ -56,6 +56,11 @@
                         <span aria-hidden="true">userindexWebAssembly</span>
                     </NavLink>
                 </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="userindexSf">
+                        <span aria-hidden="true">user SF</span>
+                    </NavLink>
+                </div>
                 
             }
         </div>
