--- a/BlazorAuthentication/BlazorAuthentication/Components/_Imports.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/_Imports.razor
@@ -15,3 +15,6 @@
 @using Radzen
 @using Radzen.Blazor
 @using BlazorAuthentication.Client.Pages
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Calendars
+@using Syncfusion.Blazor.Grids
