feat: create Dashboard

--- a/BlazorAuthentication/BlazorAuthentication.Client/Pages/Counter2.razor
+++ b/BlazorAuthentication/BlazorAuthentication.Client/Pages/Counter2.razor
@@ -1,5 +1,5 @@
-﻿@page "/counter"
-@rendermode InteractiveAuto
+﻿@page "/counter2"
+@rendermode InteractiveWebAssembly
 @using Microsoft.AspNetCore.Components.Authorization
 @inject AuthenticationStateProvider AuthenticationStateProvider
 <PageTitle>Counter</PageTitle>
