--- a/BlazorAuthentication/BlazorAuthentication.Client/Pages/CreateUser.razor
+++ b/BlazorAuthentication/BlazorAuthentication.Client/Pages/CreateUser.razor
@@ -1,5 +1,5 @@
 ﻿@rendermode InteractiveAuto
-
+@page "/CreateUser"
 @using BlazorAuthentication.Client.Model
 @using BlazorAuthentication.Client.Service.Interface
 @inject DialogService DialogService
