--- a/BlazorAuthentication/BlazorAuthentication/Components/App.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/App.razor
@@ -19,10 +19,11 @@
 
 <body>
     <div id="app" style="background-color: white;">
-        <Routes />
+        <Routes @rendermode="InteractiveServer"/>
     </div>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
     <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
+    <script src="disposeResources.js"></script>
     <script src="_framework/blazor.web.js"></script>
 </body>
 
