--- a/BlazorAuthentication/BlazorAuthentication/Components/Layout/MainLayout.razor.css
+++ b/BlazorAuthentication/BlazorAuthentication/Components/Layout/MainLayout.razor.css
@@ -6,10 +6,11 @@
 
 main {
     flex: 1;
+    background-color: white;
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-color: #1E3A8A;
 }
 
 .top-row {
