--- a/BlazorAuthentication/BlazorAuthentication/Components/Layout/NavMenu.razor
+++ b/BlazorAuthentication/BlazorAuthentication/Components/Layout/NavMenu.razor
@@ -4,7 +4,10 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorAuthentication</a>
+
+        <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="0">
+            <RadzenImage Path="images/Logomobilize.png" Style="width: 150px; cursor: pointer;" />
+        </RadzenStack>
     </div>
 </div>
 
@@ -23,14 +26,27 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
             </NavLink>
         </div>
-
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="counter2">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter 2
+            </NavLink>
+        </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
-
-       
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="dashboard">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dashboard
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="dashboardSyncfusion">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Dashboard Syncfusion
+            </NavLink>
+        </div>
+        
         <div class="nav-item px-3">
             <NavLink class="nav-link d-flex align-items-center justify-content-between" @onclick="ToggleSubNav">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>
