--- a/BlazorAuthentication/BlazorAuthentication/wwwroot/app.css
+++ b/BlazorAuthentication/BlazorAuthentication/wwwroot/app.css
@@ -1,5 +1,5 @@
 html, body {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: Inter, sans-serif;
 }
 
 a, .btn-link {
